feat: agregar integración ElevenLabs con gestión de conversación y componentes UI
Crear tipos para mensajes de conversación del asistente y estado de pantalla.
Implementar gestión de configuración de ElevenLabs.
Desarrollar hook personalizado para gestionar estado de conversación de ElevenLabs e interacciones.
Añadir AgentScreen para interacción de asistente de voz con retroalimentación visual.
Crear versión web de AgentScreen para plataformas no móviles.
Introducir estilos para AgentScreen y sus componentes.
Construir IntegrationsScreen para mostrar integraciones futuras.
Añadir componentes reutilizables Card y PrimaryButton para UI consistente.
Implementar servicios de audio y LLM para reconocimiento de voz e interacciones de modelo de lenguaje.
Definir tipos compartidos y constantes para uso consistente en toda la aplicación.
Actualizar configuración de TypeScript para resolución de rutas de módulos.

--- a/app.json
+++ b/app.json
@@ -5,15 +5,34 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "dark",
     "newArchEnabled": true,
+    "scheme": "alfred",
+    "extra": {
+      "elevenlabs": {
+        "agent_id": "YOUR_AGENT_ID_HERE",
+        "override_config": {
+          "agent": {
+            "prompt": {
+              "top_p": 0.9,
+              "temperature": 0.7,
+              "max_tokens": 256
+            }
+          }
+        }
+      }
+    },
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSMicrophoneUsageDescription": "This app needs access to microphone for voice conversations."
+      },
+      "bundleIdentifier": "com.alfred.asistenteia"
     },
     "android": {
       "adaptiveIcon": {
@@ -21,7 +40,9 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "permissions": ["RECORD_AUDIO"],
+      "package": "com.alfred.asistenteia"
     },
     "web": {
       "favicon": "./assets/favicon.png"
