--- a/package.json
+++ b/package.json
@@ -4,15 +4,26 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@elevenlabs/react-native": "^0.5.10",
+    "@livekit/react-native": "^2.9.6",
+    "@livekit/react-native-webrtc": "^137.0.2",
     "expo": "~54.0.33",
+    "expo-constants": "^18.0.13",
+    "expo-dev-client": "~6.0.20",
+    "expo-router": "^6.0.23",
     "expo-status-bar": "~3.0.9",
+    "livekit-client": "^2.17.2",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "^2.30.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
